[gd_scene load_steps=10 format=3 uid="uid://cdm3l21spj67o"]

[ext_resource type="Script" uid="uid://cyugpt4ebl116" path="res://core/night_manager/night_manager.gd" id="1_avkg3"]
[ext_resource type="PackedScene" uid="uid://do2s031gtn5hu" path="res://core/path_graph/main_path_graph.tscn" id="1_rl6em"]
[ext_resource type="Script" uid="uid://j43vlokslkrl" path="res://core/movement/array_target_camera_2d.gd" id="2_6xtx7"]
[ext_resource type="Texture2D" uid="uid://dq8586ppkneav" path="res://assets/main_assets/Map/Map_Planning.png" id="2_q0pdu"]
[ext_resource type="Texture2D" uid="uid://bxpl7d6ityfih" path="res://assets/main_assets/Map/Map_Invasion.png" id="3_b440g"]
[ext_resource type="PackedScene" uid="uid://c3ifr4bjdss33" path="res://core/crafting/crafting_ui.tscn" id="3_vkvwu"]
[ext_resource type="PackedScene" uid="uid://by3yaeckrtk5d" path="res://entities/player/player.tscn" id="4_avkg3"]
[ext_resource type="PackedScene" uid="uid://cecg0rv3tntcx" path="res://scenes/ui/night_start.tscn" id="8_q0pdu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hovik"]
radius = 214.93254

[node name="Night" type="Node2D"]
script = ExtResource("1_avkg3")
planning_background = ExtResource("2_q0pdu")
invading_background = ExtResource("3_b440g")

[node name="LoadingTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PlanningTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="PlanToInvadeTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="InvadingTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="PathGraph" parent="." instance=ExtResource("1_rl6em")]
position = Vector2(1593, 2090)
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("4_avkg3")]
position = Vector2(-1120, 1423)

[node name="OutsideColliders" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="OutsideColliders"]
polygon = PackedVector2Array(-24, 157, -30, -417, 932, -424, 1135, -420, 1147, 170, 1737, 170, 1734, -310, 4433, -317, 4431, -556, -3037, -579, -3017, -255, -660, -258, -646, 149)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="OutsideColliders"]
polygon = PackedVector2Array(4427, -297, 4442, 2371, 4656, 2393, 4686, 5425, -2996, 5432, -3018, -330, -3003, -685, -3662, -737, -3440, 5985, 5619, 5963, 5493, -637, 4449, -571)

[node name="WallColliders" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WallColliders"]
polygon = PackedVector2Array(-16, 126, 154, 121, 158, 208, -614, 218, -605, 705, -701, 709, -706, -265, -632, -265)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="WallColliders"]
polygon = PackedVector2Array(944, 126, 972, 222, 1675, 204, 1675, 360, 1776, 369, 1789, 116)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="WallColliders"]
polygon = PackedVector2Array(-3010, 997, -2176, 1002, -2148, 1019, -2159, 1102, -3038, 1075)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="WallColliders"]
polygon = PackedVector2Array(-1509, 1008, -1509, 1097, -713, 1086, -691, 1191, -608, 1191, -602, 947, -686, 941, -691, 1019)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="WallColliders"]
polygon = PackedVector2Array(-595, 1498, -711, 1504, -687, 2743, -583, 2743, -583, 1746, 224, 1746, 212, 1617, -583, 1605)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="WallColliders"]
polygon = PackedVector2Array(903, 1611, 897, 1733, 1674, 1740, 1668, 2779, 1949, 2767, 1949, 2681, 1784, 2681, 1790, 1494, 3938, 1500, 3932, 1408, 3852, 1402, 3852, 1310, 1779, 1328, 1785, 1072, 1681, 1090, 1663, 1616)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="WallColliders"]
polygon = PackedVector2Array(4173, 1338, 4184, 1533, 4368, 1530, 4377, 2326, 3786, 2318, 3804, 1449, 3661, 1467, 3661, 2309, 3222, 2300, 3195, 2676, 2219, 2703, 2228, 2792, 3204, 2792, 3213, 2909, 3348, 2917, 3348, 2443, 4700, 2443, 4700, 2282, 4485, 1333)

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="WallColliders"]
polygon = PackedVector2Array(-706, 3086, -706, 3237, -2505, 3270, -2472, 3389, -2071, 3367, -2071, 4527, -3036, 4527, -3036, 4689, 85, 4689, 117, 5090, 312, 5036, 291, 3389, 2566, 3422, 2577, 5047, 2761, 5079, 2761, 3205, 96, 3248, 96, 4451, 96, 4548, -609, 4516, -576, 3833, -728, 3812, -739, 4538, -1952, 4505, -1920, 3378, -739, 3378, -717, 3541, -587, 3530, -587, 3086)

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="WallColliders"]
polygon = PackedVector2Array(-3068, 3248, -2808, 3270, -2808, 3400, -3046, 3400)

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="WallColliders"]
polygon = PackedVector2Array(3348, 3163, 3237, 3148, 3259, 4006, 3362, 3984, 3355, 3437, 4613, 3451, 4613, 4302, 3340, 4317, 3333, 4191, 3244, 4199, 3237, 4946, 3348, 4976, 3355, 4436, 4620, 4428, 4613, 5384, 4613, 5436, 3325, 5414, 3348, 5155, 3207, 5169, 3207, 5406, 2733, 5414, 2741, 5243, 2615, 5288, 2607, 5421, 259, 5414, 244, 5273, 148, 5273, 155, 5406, 192, 5569, 4894, 5495, 4805, 3304, 4694, 3341, 3348, 3304)
metadata/_edit_lock_ = true

[node name="FurnitureColliders" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(-1690, -258, -1690, 130, -2501, 134, -2484, 1041, -3182, 1057, -3177, -338, -1724, -317)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(-2250, 1680, -2258, 2837, -1431, 2854, -1436, 1684)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(2955, 355, 2955, 569, 3653, 563, 3659, 362)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(-33, 2031, -27, 2998, 1154, 2979, 1141, 2037)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(2542, 1439, 2547, 1793, 1703, 1798, 1719, 1393)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FurnitureColliders"]
position = Vector2(-1112, 337)
shape = SubResource("CircleShape2D_hovik")

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(-1365, -268, -1689, -250, -1689, 32, -1365, 7)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(-693, 4619, -677, 4942, 182, 4957, 202, 4614)

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(4683, 2907, 4430, 2912, 4435, 3331, 4708, 3326)

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(4208, 1552, 4192, 1926, 4470, 1936, 4486, 1572)

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(4682, 3921, 4414, 3906, 4414, 4345, 4672, 4345)

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(4677, 4927, 4415, 4927, 4415, 5479, 4711, 5493)

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(1143, 3320, 1149, 3675, 2702, 3687, 2684, 3326)

[node name="CollisionPolygon2D13" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(3686, 2387, 3669, 2626, 3291, 2610, 3314, 2382)

[node name="CollisionPolygon2D14" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(3646, 3389, 3660, 3658, 3317, 3658, 3323, 3409)

[node name="CollisionPolygon2D15" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(3662, 4385, 3662, 4690, 3286, 4690, 3286, 4368)

[node name="CollisionPolygon2D16" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(-2355, 3352, -2365, 3751, -2375, 3791, -2001, 3796, -2011, 3321)

[node name="CollisionPolygon2D17" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(-2016, 4388, -1192, 4388, -1187, 4585, -2011, 4595)

[node name="CollisionPolygon2D18" type="CollisionPolygon2D" parent="FurnitureColliders"]
polygon = PackedVector2Array(-1077, 3320, -1071, 3665, -1994, 3693, -2027, 3287)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2421, 2758)
zoom = Vector2(0.25, 0.25)
script = ExtResource("2_6xtx7")
targets = Array[NodePath]([NodePath("../Player"), NodePath("")])

[node name="CraftingUI" parent="Camera2D" instance=ExtResource("3_vkvwu")]

[node name="NightStart" parent="Camera2D" instance=ExtResource("8_q0pdu")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[connection signal="timeout" from="LoadingTimer" to="." method="_on_loading_timer_timeout"]
[connection signal="timeout" from="PlanningTimer" to="." method="_on_planning_timer_timeout"]
[connection signal="timeout" from="PlanToInvadeTimer" to="." method="_on_plan_to_invade_timer_timeout"]
